# tango-examples-c

./: .gitignore  NOTICE.txt  README.md
HelloTangoJNI/: AndroidManifest.xml
TangoJNIMotionTracking/: AndroidManifest.xml
TangoJNIPointcloud/: AndroidManifest.xml
TangoJNIVideoOverlay/: AndroidManifest.xml
area-description-jni-example/: AndroidManifest.xml  local.properties
augmented-reality-jni-example/: AndroidManifest.xml  local.properties
augmented-reality-jni-example-experimental/: AndroidManifest.xml  CMakeLists.txt  build.xml  package.xml
augmented-reality-jni-example-experimental/jni/: Android.mk  tango_augmented_reality.cpp  tango_data.cpp  tango_data.h  video_overlay.cpp  video_overlay.h
augmented-reality-jni-example-experimental/res/layout/: activity_augmented_reality.xml
augmented-reality-jni-example-experimental/res/values/: strings.xml
augmented-reality-jni-example-experimental/src/com/projecttango/augmentedrealitynative/: AugmentedRealityActivity.java  AugmentedRealityView.java  TangoJNINative.java
augmented-reality-jni-example-experimental/src/com/projecttango/experiments/nativeaugmentedreality/: AugmentedRealityActivity.java  AugmentedRealityView.java  TangoJNINative.java
cpp_augmented_reality_example/: build.gradle
cpp_basic_examples/: settings.gradle
cpp_example_util/: build.gradle
cpp_hello_area_description_example/: settings.gradle
cpp_marker_detection_example/: README.md
cpp_motion_tracking_example/: build.gradle  settings.gradle
cpp_native_activity_example/: AndroidManifest.xml  build.xml
cpp_plane_fitting_example/: build.gradle
cpp_point_cloud_example/: settings.gradle
cpp_rgb_depth_sync_example/: settings.gradle
cpp_video_stabilization_experiment/: build.gradle
hello-tango-jni-example/: AndroidManifest.xml  local.properties
motion-tracking-jni-example/: AndroidManifest.xml  local.properties
native-activity-example/: AndroidManifest.xml  CMakeLists.txt  build.xml  package.xml
native-activity-example/jni/: Android.mk  native_activity.cpp
native-activity-example/res/values/: strings.xml
native-activity-example/src/com/projecttango/experiments/nativeactivity/: PermissionActivity.java
plane-fitting-jni-example/: build.gradle
point-cloud-jni-example/: AndroidManifest.xml  local.properties
rgb-depth-sync-example/: build.gradle
tango-gl/: ar_ruler.cpp  axis.cpp  band.cpp  camera.cpp  cone.cpp  conversions.cpp  cube.cpp  drawable_object.cpp  frustum.cpp  gesture_camera.cpp  grid.cpp  line.cpp  mesh.cpp  obj_loader.cpp  polygon.cpp  shaders.cpp  texture.cpp  trace.cpp  transform.cpp  util.cpp  video_overlay.cpp
tango-gl-renderer/: ar_ruler.cpp  ar_ruler.h  axis.cpp  axis.h  band.cpp  camera.cpp  camera.h  cone.cpp  cube.cpp  cube.h  drawable_object.cpp  drawable_object.h  frustum.cpp  frustum.h  gl_util.cpp  gl_util.h  grid.cpp  grid.h  polygon.cpp  trace.cpp  trace.h  transform.cpp  transform.h  video_overlay.cpp  video_overlay.h
tango_3d_reconstruction/: Android.mk
(+828 files in other folders)
