<?xml version="1.0"?>
<package>
  <name>augmented_reality_jni_example</name>
  <version>0.0.0</version>
  <description>
    Augmented reality example for Tango Service C API.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="chengyang@google.com">chengyang</maintainer>
  <license>Apache 2.0</license>

  <!-- Add your dependencies using the build_depend tag -->
  <build_depend>tango_client_api</build_depend>

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>redwood_catkin</buildtool_depend>
</package>
